# hpf

./: .gitignore  README.md  pyproject.toml
hpf/: __init__.py  analyzer.py  cli.py  models.py  range_suggester.py
hpf/formatters/: __init__.py  code_gen.py  report.py
hpf/llm/: __init__.py  base.py  ollama_client.py  openai_client.py  setup_wizard.py
tests/: test_analyzer.py  test_code_gen.py  test_llm.py  test_range_suggester.py
