[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpf"
version = "0.1.0"
description = "Automatically find optimal hyperparameter search ranges for Optuna studies"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optuna", "hyperparameter", "optimization", "machine-learning", "automl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "optuna>=3.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "rich>=13.0",
    "typer>=0.9",
    "openai>=1.0",
    "ollama>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
hpf = "hpf.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["hpf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
